<resources>
    <string name="app_name">NoFretV5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titleTextView">NoFret</string>
    <string name="pitchTextView"></string>
    <string name="todo">TODO</string>
    <string name="thirdNote">Go Ahead!</string>
    <string name="fifthNote">Try it!</string>
    <string name="textview">Sing!</string>
    <string name="FifthView">Fifth note:</string>
    <string name="ThirdView">Third Note:</string>
    <string name="textView3">Your note:</string>


</resources>